--- a/quadlist.html
+++ b/quadlist.html
@@ -2,15 +2,19 @@
 
 <ol>
   <li data-foreach-item="items">
-    <span class="label" data-bind="item.label"></span>
-    <span class="value" data-bind="item.value"></span>
+    <span class="col1" data-bind="item.col1"></span>
+    <span class="col2" data-bind="item.col2"></span>
+    <span class="col3" data-bind="item.col3"></span>
+    <span class="col4" data-bind="item.col4"></span>
   </li>
 </ol>
 
 <ul class="list-nostyle">
   <li data-foreach-item="items">
-    <span class="label" data-bind="item.label"></span>
-    <span class="value" data-bind="item.value"></span>
+    <span class="col1" data-bind="item.col1"></span>
+    <span class="col2" data-bind="item.col2"></span>
+    <span class="col3" data-bind="item.col3"></span>
+    <span class="col4" data-bind="item.col4"></span>
   </li>
 </ul>
 
